# scisieve

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  api_clients.py  extractor.py  main.py  models.py  protocol.py  pyproject.toml  requirements.txt  scicrawl.yaml  scisieve.private.yaml.example  scisieve.yaml  snowballing.py
.github/workflows/: publish-ghcr.yml  release.yml  tests.yml
examples/example_topic/: anchor_benchmark.csv  baseline_metadata.csv  gray_registry.yaml  query_packs.yaml  topic_profile.yaml
reference/: baseline_metadata.csv  scisieve_anchor_benchmark_v1.csv
scicrawl/: cli.py  common.py  config.py  pipeline.py
scisieve/: __init__.py  cli.py  config.py  pipeline.py
scripts/: compute_kappa.py
tests/: test_main.py  test_models.py  test_protocol.py  test_reconciliation.py  test_scicrawl_vnext.py  test_scisieve_smoke.py  test_scisieve_vnext.py
topics/cloud_resilience_dependability/: gray_registry.yaml  query_packs.yaml  topic_profile.yaml
