[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scisieve"
version = "1.0.1"
description = "Configurable pipeline for automated SLR/MLR construction with external topic bundles."
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
  "pymupdf>=1.24.0",
  "PyYAML>=6.0",
]

[project.scripts]
scisieve = "scisieve.cli:main"

[tool.setuptools]
packages = ["scisieve"]

